test/fail_compilation/imports/test2225.d
module imports.test2225;

class Outer
{
    int a;
private:
    class Inner
    {
        void foo()
        {
            return a;
        }
    }
}
